Change extra_jvm_args config field to use a string instead of list of strings.